@@ -38,10 +38,10 @@
   aa57cd5a0e02d039f82522d68476f948a64115d7 2013090802 mingw32-gcc4.xml
   2aec3c75d5ccba91607e343bcc304f3baf24ae56 2012082702 mingw32-gdb.xml
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
-  e96f16b3e2b203b30e719f840acb0bed5a44226a 2013090300 mingw32-gettext.xml
+  b186b169c3974dbaebe1be4f2435d9c2783e2751 2013090900 mingw32-gettext.xml
   b17b34405de37f8ee13721fd08da82ca63c3491f 2013082300 mingw32-gmp.xml
   99e3ac0d2c743b0d927a4d89a3153a975d2bdf87 2012073100 mingw32-libarchive.xml
-  e82d6fd4d137c61c2e30da0e6208f75ae6c15c96 2013090300 mingw32-libiconv.xml
+  ad6a40cea0ce0944de475e749f1aa70832bb6d31 2013090900 mingw32-libiconv.xml
   ccc15973cdc9ff14c12e4385c3e692af1c18b29d 2012073100 mingw32-libtool.xml
   abf16c6e3575585f92c4a88b7be2c1bf6f7e5f26 2012021600 mingw32-lua.xml
   ad4dbe74ea803c6e1e60aae92768cf62655fb77d 2012090201 mingw32-make.xml
@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   d0657d9bc4fd5fa5bae78d80f003485cfde305c3 2013082300 mingw32-mpc.xml
   9c47305797d932da02275a6894b30492440af00e 2013082300 mingw32-mpfr.xml
-  983af8ad24a6f97da867784dfeeecc6661d54d88 2013090802 mingw32-package-list.xml
+  983af8ad24a6f97da867784dfeeecc6661d54d88 2013090900 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   7e22a7d22719059c28dcb37b7a48806070964b09 2013082800 mingw32-pthreads-w32.xml
