@@ -39,7 +39,7 @@
 
       <component class="bin">
 	<release tarname="gettext-0.18.3.1-1-mingw32-bin.tar.lzma" >
-	  <requires eq="gcc-core-4.8.1-1-mingw32-dll.tar.lzma" />
+	  <requires eq="mingw32-libgcc-4.8.1-1-mingw32-dll-1.tar" />
 	  <requires eq="libiconv-1.14-3-mingw32-dll.tar.lzma" />
 	  <requires eq="gettext-%-mingw32-dll.tar.lzma" />
 	</release>
