@@ -25,7 +25,7 @@
 
       <component class="bin">
         <release tarname="libiconv-1.14-3-mingw32-bin.tar.lzma" >
-	  <requires eq="gcc-core-4.8.1-1-mingw32-dll.tar.lzma" />
+	  <requires eq="mingw32-libgcc-4.8.1-1-mingw32-dll.tar" />
 	  <requires eq="gettext-0.18.3.1-1-mingw32-dll.tar.lzma" />
 	  <requires eq="libiconv-%-mingw32-dll.tar.lzma" />
 	</release>
@@ -65,7 +65,7 @@
 
       <component class="dll">
 	<release tarname="libiconv-1.14-3-mingw32-dll.tar.lzma" >
-	  <requires eq="gcc-core-4.8.1-1-mingw32-dll.tar.lzma" />
+	  <requires eq="mingw32-libgcc-4.8.1-1-mingw32-dll.tar" />
 	</release>
         <release tarname="libiconv-1.14-2-mingw32-dll-2.tar.lzma" >
 	  <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
